# Cv_Task

./: CMakeLists.txt  README.md  index.html  main.cpp  main.js  package-lock.json  package.json  renderer.js  styles.css
